# audit_log/app.py
@@ -96,6 +96,9 @@ def get_coffeeFlavour_readings(index):
     logger.error("Could not find location at index %d" % index)
     return {"message": "Not Found"}, 404
 
+def get_health():
+    return 200
+
 
 app = connexion.FlaskApp(__name__, specification_dir='')
 if "TARGET_ENV" not in os.environ or os.environ["TARGET_ENV"] != "test":
