# receiver/app.py
@@ -84,6 +84,8 @@ def report_coffeeLocation_reading(body):
 
     return NoContent, 201
 
+def get_health():
+    return 200
 
 app = connexion.FlaskApp(__name__, specification_dir='./')
 app.add_api("openapi.yaml", base_path="/receiver", strict_validation=True, validate_responses=True)
