# storage/app.py
@@ -165,6 +165,9 @@ def process_messages():
         session.close()
         consumer.commit_offsets()
 
+def get_health():
+    return 200
+
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api("openapi.yaml", base_path="/storage", strict_validation=False, validate_responses=False)
 
